Closed
Bug 1506454
Opened Last year
Closed Last year
Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey
Categories
(Core :: JavaScript Engine, defect, P1)
P1
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox65 | --- | fixed |
People
(Reporter: cybai, Assigned: cybai)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:65.0) Gecko/20100101 Firefox/65.0 Steps to reproduce: When I worked on `unhandledrejection` event for Servo, I found this internal slot was missing in SM. So, I've sent a PR to mozjs in https://github.com/servo/mozjs/pull/150 . I'll send a patch for this issue. Actual results: The `GetPromiseIsHandled` internal slot is missing Expected results: We should have `GetPromiseIsHandled` internal slot in Promise
Updated•Last year
|
Component: Untriaged → JavaScript Engine
Product: Firefox → Core
Updated•Last year
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 1•Last year
|
||
Introduce GetPromiseIsHandled internal slot for Promise.
Updated•Last year
|
Assignee: nobody → cyb.ai.815
Comment 2•Last year
|
||
Thanks! r+ed with some comments :)
Assignee | ||
Comment 3•Last year
|
||
arai, thanks for the review! I just updated the PR but I'm still not so familiar with hg. So I didn't squash the commits, if you think squashing commits is required, please let me know, I will try it again, thanks!
Assignee | ||
Updated•Last year
|
Summary: Introduce GetPromiseIsHandled internal slot to Promise for Spider Monkey → Add JS API to make GetPromiseIsHandled internal slot in Promise accessible in Spider Monkey
Updated•Last year
|
Attachment #9024290 -
Attachment description: Bug 1506454 - Introduce GetPromiseIsHandled internal slot for Promise → Bug 1506454 - Add JS API to make GetPromiseIsHandled internal slot in Promise accessible in Spider Monkey
Assignee | ||
Comment 4•Last year
|
||
Oh! I found I just used wrong command to update phabricator in my first try for squash. And now I have squashed the commits successfully!
Comment 5•Last year
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=2fea7b538960579e30674ce52bf9101374936918
Updated•Last year
|
Attachment #9024290 -
Attachment description: Bug 1506454 - Add JS API to make GetPromiseIsHandled internal slot in Promise accessible in Spider Monkey → Bug 1506454 - Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey
Pushed by arai_a@mac.com: https://hg.mozilla.org/integration/autoland/rev/0dc9d562a03a Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey r=arai
Assignee | ||
Updated•Last year
|
Summary: Add JS API to make GetPromiseIsHandled internal slot in Promise accessible in Spider Monkey → Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey
Updated•Last year
|
Priority: -- → P1
Comment 7•Last year
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/0dc9d562a03a
Status: NEW → RESOLVED
Closed: Last year
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•