Bug 1506454 - Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey r=arai

Add JS API to make [[PromiseIsHandled]] internal slot in Promise accessible in Spider Monkey.

Differential Revision: https://phabricator.services.mozilla.com/D11578